2005-08-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* "Go To Subtitle" under Search menu done.
	  New files: goto-dialog.glade, searcher.py, goto.py

2005-07-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Format menu done.
	  New files: formatter.py (x2)
	  
	* Fixed sort order interfearing with editing.

	* Miscellanous bug fixes.

2005-07-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Data is now resorted by show time/frame after manual editing.

2005-07-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Undo/redo system written.
	  New file: durmanager.py
	  
	* Manual editing is now possible.
	  New files: maneditor.py, editor.py
	  
	* guiupdater.py rewritten.
	
	* Miscellanous bug fixes and minor additions.

2005-07-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New file: lib/gaupol/gui/constants.py.
	* View menu action states now get updated on document switch.
	* Changed key and section names in config.py.
	
	* Project moved from SourceForge to Gna!.
	* Code, without history, moved to Subversion system.
	
2005-07-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Cell renderers redone. New config setting: "font".

2005-07-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* View menu done. New files: viewer.py and frconv.py.
	* Some minor bug fixes.

2005-07-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Initial CVS upload.
	* File, Documents and Help menus done.