@@ -1,6 +1,5 @@
 Before 0.1
 ==========
-- Character counts on statusbar
 - Edit menu & list right-click menu
 - Preferences dialog
 - Installation
